# corvid

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  config.example.json  corvid.spec  pyproject.toml  pyrightconfig.json  run.bat  run.py
docs/: oe_mapping.md
packaging/: corvid.iss  corvid_gui.py
src/corvid/: __init__.py  __main__.py  cli.py  errors.py  htmlsanitize.py  ids.py
src/corvid/app/: __init__.py  bootstrap.py  config.py  crash.py  jobs.py  logging_setup.py  paths.py
src/corvid/domain/: __init__.py  compose.py  entities.py  news.py  rules.py  threads.py  updates.py
src/corvid/infra/: __init__.py  autodiscovery.py  credentials.py  oauth.py  updates.py
src/corvid/service/: __init__.py  accounts.py  actions.py  calendar.py  contact_import.py  contacts.py  delivery.py  factory.py  import_store.py  messages.py  news.py  pop3.py  rules.py  search.py  send.py  sync.py  updates.py
src/corvid/ui/: app.py  (+21 more)
tests/: conftest.py  fakes.py  test_accessibility.py  test_account_oauth.py  test_account_verify.py  test_actions.py  test_autodiscovery.py  test_bootstrap.py  test_calendar.py  test_compose.py  test_config.py  test_contact_import.py  test_contacts.py  test_crash.py  test_credentials.py  test_drafts.py  test_htmlsanitize.py  test_imap_parse.py  test_import.py  test_jobs.py  test_message_body_service.py  test_migrations.py  test_nntp.py  test_oauth.py  test_parsing.py  test_paths.py  test_pop3.py  test_presenters.py  test_repositories.py  test_rules.py  test_search.py  test_send_service.py  test_sync_service.py  test_threads.py  test_updates.py
(+34 files in other folders)
