[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "corvid"
version = "0.2.0"
description = "A modern, Outlook Express-inspired desktop email and news client."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Corvid contributors" }]
keywords = ["email", "imap", "smtp", "mail-client", "outlook-express"]
dependencies = []

[project.optional-dependencies]
ui = ["wxPython>=4.2"]
dev = ["pytest>=8.0", "pytest-cov", "mypy>=1.9", "ruff>=0.4"]

[project.scripts]
corvid = "corvid.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"corvid.ui" = ["assets/*.png", "assets/*.ico"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
files = ["src"]

# wxPython ships no type stubs / py.typed marker, and keyring is optional; the
# core (domain/infra/service) is strictly typed, but the thin wx view layer that
# subclasses untyped widgets cannot be, so it is excluded from strict checking.
[[tool.mypy.overrides]]
module = ["wx.*", "keyring.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["corvid.ui.*"]
ignore_errors = true
